--- a/AlveoEnergy/src/app/components/inventory/inventory.component.html
+++ b/AlveoEnergy/src/app/components/inventory/inventory.component.html
@@ -179,4 +179,94 @@
   </mat-tab>
 
 
+  <mat-tab label="Contactors">
+
+    <mat-form-field *ngIf="contactorItemsList && contactorItemsList.data">
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyContactorFilter($event)" placeholder="Ex. ium" #input>
+    </mat-form-field>
+
+    <table *ngIf="contactorItemsList && contactorItemsList.data" mat-table [dataSource]="contactorItemsList" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="partNumber">
+        <th mat-header-cell *matHeaderCellDef> Part Number </th>
+        <td mat-cell *matCellDef="let element"> {{element.PartNumber}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Make">
+        <th mat-header-cell *matHeaderCellDef> Make </th>
+        <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Qty">
+        <th mat-header-cell *matHeaderCellDef> Quantity </th>
+        <td mat-cell *matCellDef="let element"> {{element.Qty}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedContactorColumnsList"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedContactorColumnsList;" (click)="getContactorRecord(row)"></tr>
+    </table>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+
+  </mat-tab>
+
+  <mat-tab label="Isolators">
+
+    <mat-form-field *ngIf="isolatorsList && isolatorsList.data">
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyisolatorFilter($event)" placeholder="Ex. ium" #input>
+    </mat-form-field>
+
+    <table *ngIf="isolatorsList && isolatorsList.data" mat-table [dataSource]="isolatorsList" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="partNumber">
+        <th mat-header-cell *matHeaderCellDef> Part Number </th>
+        <td mat-cell *matCellDef="let element"> {{element.PartNumber}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Make">
+        <th mat-header-cell *matHeaderCellDef> Make </th>
+        <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Qty">
+        <th mat-header-cell *matHeaderCellDef> Quantity </th>
+        <td mat-cell *matCellDef="let element"> {{element.Qty}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedIsolatorColumnsList"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedIsolatorColumnsList;"></tr>
+    </table>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+
+  </mat-tab>
+
+
+
 </mat-tab-group>
