--- a/AlveoEnergy/src/app/components/projects/projects.component.html
+++ b/AlveoEnergy/src/app/components/projects/projects.component.html
@@ -10,7 +10,7 @@
 
   <ng-container matColumnDef="projectNumber">
     <th mat-header-cell *matHeaderCellDef> Project Number </th>
-    <td mat-cell *matCellDef="let element"> {{element.Number}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.ProjectNumber}} </td>
   </ng-container>
 
   <ng-container matColumnDef="projectName">
@@ -30,7 +30,7 @@
 
   <ng-container matColumnDef="projectLeader">
     <th mat-header-cell *matHeaderCellDef> Leader </th>
-    <td mat-cell *matCellDef="let element"> {{element.Leader}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.ProjectLeader}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedProjectsColumnsList"></tr>
